# fuel-canary-watchtower

./: .gitignore  Cargo.toml  README.md  watchtower_config.json.example
abi/: FuelChainConsensus.json  FuelChainState.json  FuelERC20Gateway.json  FuelMessagePortal.json
src/: alerts.rs  config.rs  ethereum_actions.rs  ethereum_watcher.rs  fuel_watcher.rs  lib.rs  main.rs
src/ethereum_watcher/: consensus_contract.rs  ethereum_chain.rs  gateway_contract.rs  portal_contract.rs  state_contract.rs
src/fuel_watcher/: fuel_chain.rs  fungible_token_contract.rs
